--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     ================================================== -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Ffood</title>
+        <title>Home</title>
 
         <script>
             document.documentElement.classList.remove("no-js");
@@ -28,19 +28,19 @@
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="apple-touch-icon.png"
+            href="{{ url_for('static', filename='images/iconLogo.png') }}"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="favicon-32x32.png"
+            href="{{ url_for('static', filename='images/iconLogo.png') }}"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="favicon-16x16.png"
+            href="{{ url_for('static', filename='images/iconLogo.png') }}"
         />
         <link
             rel="manifest"
@@ -75,7 +75,7 @@
                     {% if not session['username'] %}
                     <div class="s-header__cta">
                         <a
-                            href="login.html"
+                            href="login"
                             class="btn btn--primary s-header__cta-btn"
                             >Log In Now</a
                         >
@@ -90,24 +90,25 @@
                     >
 
                     <div class="s-header__nav-logo">
-                        <a href="index.html"> Ffood </a>
+                        <a href="/"> Ffood </a>
                     </div>
                     <!-- s-header__nav-logo -->
 
                     <ul class="s-header__nav-links">
-                        <li class="current"><a href="index.html">Home</a></li>
+                        <li class="current"><a href="/">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         {% if not session['username'] %}
                         <li>
-                            <a href="register.html">Register</a>
+                            <a href="register">Register</a>
                         </li>
                         <li>
-                            <a href="login.html">Log In</a>
+                            <a href="login">Log In</a>
                         </li>
                         {% endif %} {% if session['username'] %}
-                        <li><a href="user.html">Get to know the food</a></li>
-                        <li><a href="profile.html">Profile</a></li>
-                        <li><a href="favorites.html">Favorites</a></li>
+                        <li><a href="food">Get to know the food</a></li>
+                        <li><a href="profile">Profile</a></li>
+                        <li><a href="favorites">Favorites</a></li>
+                        <li><a href="use">How to use</a></li>
                         <li>
                             <a href="#" onclick="window.location.href='/logout'"
                                 >Log Out</a
@@ -724,7 +725,7 @@
                 <div class="row s-footer__top row-x-center">
                     <div class="column xl-4 lg-6 tab-8 mob-12">
                         <a
-                            href="register.html"
+                            href="register"
                             class="btn btn--primary btn--large u-fullwidth"
                             >Start here</a
                         >
