--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
     ================================================== -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Reservations - Ffood</title>
+        <title>Register - Ffood</title>
 
         <script>
             document.documentElement.classList.remove("no-js");
@@ -27,19 +27,19 @@
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="apple-touch-icon.png"
+            href="{{ url_for('static', filename='images/iconLogo.png') }}"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="favicon-32x32.png"
+            href="{{ url_for('static', filename='images/iconLogo.png') }}"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="favicon-16x16.png"
+            href="{{ url_for('static', filename='images/iconLogo.png') }}"
         />
         <link
             rel="manifest"
@@ -79,15 +79,15 @@
                     >
 
                     <div class="s-header__nav-logo">
-                        <a href="index.html"> Ffood </a>
+                        <a href="/"> Ffood </a>
                     </div>
                     <!-- s-header__nav-logo -->
 
                     <ul class="s-header__nav-links">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li>
-                            <a href="login.html">Login</a>
+                            <a href="login">Login</a>
                         </li>
                     </ul>
                     <!-- s-header__nav-links -->
@@ -197,7 +197,7 @@
                                                     <span class="label-text"
                                                         >Already have an
                                                         account.
-                                                        <a href="login.html"
+                                                        <a href="login"
                                                             >Login now.</a
                                                         >
                                                     </span>
@@ -393,7 +393,7 @@
                 <div class="row s-footer__top row-x-center">
                     <div class="column xl-4 lg-6 tab-8 mob-12">
                         <a
-                            href="register.html"
+                            href="register"
                             class="btn btn--primary btn--large u-fullwidth"
                             >Start here</a
                         >
