--- a/templates/food.html
+++ b/templates/food.html
@@ -890,7 +890,6 @@
     }
 
     function handleAddToFavorite(e) {
-        console.log(e);
         let cloneObj = {
             calories: e?.calories,
             label: e?.label,
@@ -900,7 +899,7 @@
         };
         fetch("/add_to_favorite", {
             method: "POST",
-            body: JSON.stringify({ value: JSON.stringify(cloneObj) }),
+            body: JSON.stringify(cloneObj),
             headers: {
                 "Content-Type": "application/json",
             },
